# Y_LAB_Python_intensive_course

./: .env_sample  Makefile  README.md  pyproject.toml
menu_app/: crud.py  database.py  main.py  models.py  schemas.py
menu_app/dishes/: dish_api.py  dish_crud.py
menu_app/menus/: menu_api.py  menu_crud.py
menu_app/submenus/: submenu_api.py  submenu_crud.py
